# nyc_taxi_tips

./: Exploratory Analysis.ipynb  LICENSE  README.md  Task 1.Exploratory Analysis.ipynb  Tip Prediction.ipynb  Tip_Prediction_2025.ipynb  WIP_notebook.ipynb  catboost_tip_pipeline.joblib  geocat.py  main.py  pyproject.toml  torch.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/SHP/: Visualisations.ipynb
data/models/: pipeline_model.joblib
docs/: CARTO_REPORT.md  README.md
mlruns/0/: meta.yaml
mlruns/0/082ad5d5708d41a6823724e1257b32a1/: meta.yaml
mlruns/0/0fe85bf336714af1b39b89e833cc5ab6/: meta.yaml
mlruns/0/1336d335e4674bbe919ec83be034cb84/: meta.yaml
mlruns/0/16aff978c8fc4b2cb5009d7fd5fcc87d/: meta.yaml
mlruns/0/18577a6268c240d7b2cefd5062c5bdc4/: meta.yaml
mlruns/0/18fd4e75425248d9929fb0d153bb1b4f/: meta.yaml
mlruns/0/20f77811d96b4d5d8e36f011d2396190/: meta.yaml
mlruns/0/21d8a78e22784ad7aa1beb757e1e9b01/: meta.yaml
mlruns/0/238ff9fcf8fc4159b0e1314a832b4e4b/: meta.yaml
mlruns/0/24738eb279394d218eae40e597337636/: meta.yaml
notebooks/: Boosting_Models.ipynb  Linear_Models.ipynb  Tip_Prediction_2025.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/ss/: Exploratory Analysis.ipynb  WIP_notebook.ipynb  test.ipynb
outputs/maps/: nyc_test_map.qgz
scripts/: model.py  network.py  test.py
srs/: setup.py
srs/taxi_driver/: taxi_driver.py
srs/threejs/: index.html
taxi_driver/: tax_driver_new.py  taxi_driver.py
(+592 files in other folders)
